# demo-poo

./: .clang-tidy  .gitignore  CMakeLists.bcryptcpp.txt  CMakeLists.txt  Candidat.cpp  Candidat.h  Lista.cpp  Lista.h  ListaDubluInlantuita.cpp  Nod.cpp  README.md  SomeClass.cpp  SomeClass.h  coverage.ListaDubluInlantuita.cpp.html  coverage.Nod.cpp.html  coverage.Nod.h.html  coverage.html  coverage.main.cpp.html  main.cpp  run.sh  run_valgrind.sh
.circleci/: config.yml
.github/workflows/: ccpp.yml  cmake.yml  env_details.yml  run.sh  run_valgrind.sh
.semaphore/: semaphore.yml
bcryptcpp-patches/src/: openbsd.h
libs/: build_deps.sh
sapt_11/: Account.cpp  Account.h  CMakeLists.txt  Commit.cpp  Commit.h  NormalAccount.cpp  NormalAccount.h  OrganizationAccount.cpp  OrganizationAccount.h  Repository.cpp  Repository.h  main.cpp  repo_full.cpp  repo_full.h
sapt_5/: CMakeLists.txt  ListaDubluInlantuita.cpp  ListaDubluInlantuita.h  Nod.h
sapt_6/: CMakeLists.txt  Cerc.cpp  Cerc.h  Dreptunghi.cpp  Dreptunghi.h  Forma.cpp  Forma.h  Pătrat.cpp  Pătrat.h  Triunghi.cpp  Triunghi.h  main.cpp  test_initial.cpp  test_initial.h
scripts/: run.sh  run_valgrind.sh
